--- a/index.html
+++ b/index.html
@@ -577,27 +577,59 @@
 
 
     <!-- SKILLS -->
-    <section id="skills" class="page">
-      <h1>Skills</h1>
+    <!-- SKILLS -->
+<section id="skills" class="page">
+  <h1>Skills</h1>
 
-      <div class="skills-grid">
-        <div class="skill-card">
-          <h3>Power BI & Analytics</h3>
-          <div class="skill"><div class="skill-name">Power BI Desktop / Service</div><div class="skill-bar"><div class="skill-fill" style="width:95%"></div></div></div>
-          <div class="skill"><div class="skill-name">DAX</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
-          <div class="skill"><div class="skill-name">Power Query</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
-          <div class="skill"><div class="skill-name">Data Modelling</div><div class="skill-bar"><div class="skill-fill" style="width:88%"></div></div></div>
-        </div>
+  <div class="card-grid">
 
-        <div class="skill-card">
-          <h3>Databases & Automation</h3>
-          <div class="skill"><div class="skill-name">SQL Server / MySQL</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
-          <div class="skill"><div class="skill-name">Snowflake</div><div class="skill-bar"><div class="skill-fill" style="width:80%"></div></div></div>
-          <div class="skill"><div class="skill-name">Python</div><div class="skill-bar"><div class="skill-fill" style="width:75%"></div></div></div>
-          <div class="skill"><div class="skill-name">Excel / VBA</div><div class="skill-bar"><div class="skill-fill" style="width:90%"></div></div></div>
-        </div>
-      </div>
-    </section>
+    <!-- Core Analytics -->
+    <div class="card">
+      <h3>Core Analytics & BI</h3>
+      <ul>
+        <li>Power BI (Desktop, Service, RLS, Performance Optimization)</li>
+        <li>Data Modeling (Star Schema, Semantic Models)</li>
+        <li>DAX (Complex KPIs, Optimization, Time Intelligence)</li>
+        <li>Power Query (ETL, Query Folding)</li>
+      </ul>
+    </div>
+
+    <!-- Data & Engineering -->
+    <div class="card">
+      <h3>Data & Engineering</h3>
+      <ul>
+        <li>SQL (Joins, Aggregations, Validation, Reconciliation)</li>
+        <li>APIs (Data Extraction & Integration)</li>
+        <li>Snowflake, SQL Server, Oracle, SAP</li>
+        <li>Refresh Strategy & Performance Tuning</li>
+      </ul>
+    </div>
+
+    <!-- Business Analytics -->
+    <div class="card">
+      <h3>Business & Analytical Skills</h3>
+      <ul>
+        <li>KPI Definition & Metric Standardization</li>
+        <li>Root Cause & Trend Analysis</li>
+        <li>Decision Support & Insight Storytelling</li>
+        <li>Forecasting & Performance Analysis</li>
+      </ul>
+    </div>
+
+    <!-- Professional Skills -->
+    <div class="card">
+      <h3>Professional Skills</h3>
+      <ul>
+        <li>Stakeholder Communication</li>
+        <li>Requirement Gathering & Clarification</li>
+        <li>Cross-functional Collaboration</li>
+        <li>Documentation & Knowledge Transfer</li>
+        <li>Time Management & Prioritization</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
 
     <!-- PROJECTS -->
     <section id="projects" class="page">
