--- a/index.html
+++ b/index.html
@@ -656,21 +656,164 @@
     </section>
 
     <!-- EDUCATION -->
-    <section id="education" class="page">
-      <h1>Education</h1>
+    <!-- EDUCATION -->
+<section id="education" class="page">
+  <h1>Education</h1>
 
-      <div class="card-grid">
-        <div class="card">
-          <h3>MBA – Business Analytics</h3>
-          <p>Birla Institute of Technology & Science (2025 – 2027)</p>
-        </div>
-
-        <div class="card">
-          <h3>BBA – Marketing</h3>
-          <p>Emeralds Degree & PG College (2018 – 2021)</p>
-        </div>
+  <!-- Post Graduation -->
+  <div class="exp-accordion">
+    <div class="exp-header" onclick="toggleExp(this)">
+      <div>
+        <div class="exp-title">MBA – Business Analytics</div>
+        <div class="exp-subtitle">Birla Institute of Technology & Science | 2025 – 2027</div>
       </div>
-    </section>
+      <div class="exp-toggle">Read more</div>
+    </div>
+
+    <div class="exp-body">
+      <div class="exp-body-inner">
+
+        <h3>Overview</h3>
+        <p>
+          Pursuing MBA with a specialization in Business Analytics, focused on
+          applying data-driven techniques to solve real-world business problems.
+        </p>
+
+        <h3>Key Subjects</h3>
+        <ul>
+          <li>Statistical Analysis & Business Statistics</li>
+          <li>Data Analytics & Visualization</li>
+          <li>Predictive Modeling & Forecasting</li>
+          <li>Business Intelligence & Decision Science</li>
+          <li>Operations & Supply Chain Analytics</li>
+          <li>Data Science</li>
+        </ul>
+
+        <h3>Academic Focus</h3>
+        <p>
+          Emphasis on translating analytical insights into business decisions,
+          aligning analytics with organizational strategy.
+        </p>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Bachelor's -->
+  <div class="exp-accordion">
+    <div class="exp-header" onclick="toggleExp(this)">
+      <div>
+        <div class="exp-title">BBA – Marketing</div>
+        <div class="exp-subtitle">Emeralds Degree & PG College | 2018 – 2021</div>
+      </div>
+      <div class="exp-toggle">Read more</div>
+    </div>
+
+    <div class="exp-body">
+      <div class="exp-body-inner">
+
+        <h3>Overview</h3>
+        <p>
+          Undergraduate degree focused on marketing strategy, consumer behavior,
+          and business fundamentals, which laid a strong foundation for my
+          analytics career.
+        </p>
+
+        <h3>Key Subjects</h3>
+        <ul>
+          <li>Marketing Management</li>
+          <li>Business Economics</li>
+          <li>Financial Accounting</li>
+          <li>Business Statistics</li>
+          <li>Operations Management</li>
+        </ul>
+
+        <h3>Performance</h3>
+        <p>
+          Graduated with <strong>87%</strong>.
+        </p>
+
+        <h3>Academic Achievements</h3>
+        <ul>
+          <li>Actively participated in academic and management activities</li>
+          <li>Recognized for consistent academic performance</li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Intermediate -->
+<div class="exp-accordion">
+  <div class="exp-header" onclick="toggleExp(this)">
+    <div>
+      <div class="exp-title">Intermediate (MEC)</div>
+      <div class="exp-subtitle">Board of Intermediate Education | Year</div>
+    </div>
+    <div class="exp-toggle">Read more</div>
+  </div>
+
+  <div class="exp-body">
+    <div class="exp-body-inner">
+
+      <h3>Stream</h3>
+      <p>
+        Completed Intermediate education in <strong>MEC (Mathematics,
+        Economics, and Commerce)</strong>, building a strong foundation in
+        quantitative analysis, economic principles, and business concepts.
+      </p>
+
+      <h3>Key Subjects</h3>
+      <ul>
+        <li>Mathematics</li>
+        <li>Economics</li>
+        <li>Commerce</li>
+      </ul>
+
+      <h3>Performance</h3>
+      <p>
+        Secured <strong>851/1000(Eight Fifty One)</strong>.
+      </p>
+
+    </div>
+  </div>
+</div>
+
+  <!-- 10th -->
+  <div class="exp-accordion">
+    <div class="exp-header" onclick="toggleExp(this)">
+      <div>
+        <div class="exp-title">Secondary School (10th)</div>
+        <div class="exp-subtitle">Board of Secondary Education | Year</div>
+      </div>
+      <div class="exp-toggle">Read more</div>
+    </div>
+
+    <div class="exp-body">
+      <div class="exp-body-inner">
+
+        <h3>Overview</h3>
+        <p>
+          Completed secondary education with a strong academic record and
+          consistent performance across subjects.
+        </p>
+
+        <h3>Performance</h3>
+        <p>
+          Achieved <strong>8.5/10</strong>.
+        </p>
+
+        <h3>School Achievements</h3>
+        <ul>
+          <li>Participated in academic and extracurricular activities</li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
 
     <!-- ACHIEVEMENTS -->
     <section id="achievements" class="page">
