--- a/index.html
+++ b/index.html
@@ -577,7 +577,6 @@
 
 
     <!-- SKILLS -->
-    <!-- SKILLS -->
 <section id="skills" class="page">
   <h1>Skills</h1>
 
@@ -655,7 +654,6 @@
       </div>
     </section>
 
-    <!-- EDUCATION -->
     <!-- EDUCATION -->
 <section id="education" class="page">
   <h1>Education</h1>
@@ -748,7 +746,7 @@
   <div class="exp-header" onclick="toggleExp(this)">
     <div>
       <div class="exp-title">Intermediate (MEC)</div>
-      <div class="exp-subtitle">Board of Intermediate Education | Year</div>
+      <div class="exp-subtitle">Board of Intermediate Education | 2016 - 2018</div>
     </div>
     <div class="exp-toggle">Read more</div>
   </div>
@@ -784,7 +782,7 @@
     <div class="exp-header" onclick="toggleExp(this)">
       <div>
         <div class="exp-title">Secondary School (10th)</div>
-        <div class="exp-subtitle">Board of Secondary Education | Year</div>
+        <div class="exp-subtitle">Board of Secondary Education | 2015 - 2016</div>
       </div>
       <div class="exp-toggle">Read more</div>
     </div>
