--- a/index.html
+++ b/index.html
@@ -813,27 +813,77 @@
 </section>
 
 
-    <!-- ACHIEVEMENTS -->
-    <section id="achievements" class="page">
-      <h1>Achievements</h1>
+  <!-- ACHIEVEMENTS -->
+<section id="achievements" class="page">
+  <h1>Achievements</h1>
 
-      <div class="card-grid">
-        <div class="card">
-          <h3>Overall Best Employee</h3>
-          <p>Recognized for consistent high-quality delivery.</p>
-        </div>
+  <div class="experience-timeline">
 
-        <div class="card">
-          <h3>Excellence in Quality & Productivity</h3>
-          <p>Maintained 94%+ data accuracy.</p>
-        </div>
+    <!-- NIQ Achievements -->
+    <div class="exp-item">
+      <div class="exp-dot"></div>
+      <div class="exp-card">
+        <h3>NIQ – Corporate Achievements</h3>
 
-        <div class="card">
-          <h3>Most Innovative Employer of the Year</h3>
-          <p>Awarded for Power BI-driven innovation.</p>
-        </div>
+        <ul>
+          <li>
+            <strong>Star of the Week (14 Times)</strong> – Awarded consistently
+            for maintaining <strong>98%+ data quality</strong> across weekly
+            deliverables and enterprise dashboards.
+          </li>
+
+          <li>
+            <strong>Mega Star of the Month (6 Times)</strong> – Recognized for
+            sustained performance, quality assurance, and on-time delivery
+            across high-impact reporting initiatives.
+          </li>
+
+          <li>
+            <strong>NOC STAR Award (4 Times)</strong> – One of the most prestigious
+            recognitions at NIQ, awarded for delivering significant project
+            outcomes. Led <strong>3 critical projects</strong> and delivered
+            one project <strong>one week ahead of deadline</strong>, exceeding
+            expectations.
+          </li>
+
+          <li>
+            <strong>Best Employee Award</strong> – Recognized for overall
+            excellence in analytics delivery, ownership, and stakeholder trust.
+          </li>
+        </ul>
       </div>
-    </section>
+    </div>
+
+    <!-- MORE Retail Achievements -->
+    <div class="exp-item">
+      <div class="exp-dot"></div>
+      <div class="exp-card">
+        <h3>MORE Retail – Leadership & Service Awards</h3>
+
+        <ul>
+          <li>
+            <strong>Best Employee Award</strong> – Recognized for strong store
+            leadership, operational efficiency, and performance improvement.
+          </li>
+
+          <li>
+            <strong>Youngest Manager Award</strong> – Awarded for driving
+            measurable sales growth and cost reduction through data-driven
+            inventory planning and customer analysis.
+          </li>
+
+          <li>
+            <strong>Best Customer Service Award</strong> – Recognized for
+            improving customer experience, service quality, and store-level
+            satisfaction metrics.
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- CONTACT (ORIGINAL) -->
     <section id="contact" class="page">
