--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
   <div class="exp-header" onclick="toggleExp(this)">
     <div>
       <div class="exp-title">Intermediate (MEC)</div>
-      <div class="exp-subtitle">Board of Intermediate Education | 2016 - 2018</div>
+      <div class="exp-subtitle">Emerald's Junior College | 2016 - 2018</div>
     </div>
     <div class="exp-toggle">Read more</div>
   </div>
@@ -782,7 +782,7 @@
     <div class="exp-header" onclick="toggleExp(this)">
       <div>
         <div class="exp-title">Secondary School (10th)</div>
-        <div class="exp-subtitle">Board of Secondary Education | 2015 - 2016</div>
+        <div class="exp-subtitle">Sri Chaitanya Children's Academy | 2015 - 2016</div>
       </div>
       <div class="exp-toggle">Read more</div>
     </div>
