--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lakshmi Teja Kumar | Data Analyst & Power BI Developer</title>
+  <title>Lakshmi Tej Kumar | Data Analyst </title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -335,7 +335,7 @@
 
 <header>
   <div class="brand">
-    <span>Lakshmi Teja Kumar</span>
+    <span>Lakshmi Tej Kumar</span>
   </div>
 
   <nav>
@@ -358,8 +358,8 @@
     <!-- HOME (ORIGINAL – UNTOUCHED) -->
     <section id="home" class="page active">
       <div class="welcome">WELCOME</div>
-      <h1>Hi, I'm Lakshmi Teja Kumar</h1>
-      <h2>Data Analyst & Power BI Developer</h2>
+      <h1>Hi, I'm Lakshmi Tej Kumar</h1>
+      <h2>Data Analyst </h2>
       <p>
         Enterprise Data Analyst with 3.8 years of professional experience delivering
         scalable business intelligence solutions, KPI-driven dashboards, and
@@ -375,7 +375,7 @@
       <h1>About Me</h1>
       <p>
         I am a data professional with 3.8 years of hands-on experience, most recently
-        working as a Data Analyst (Power BI Developer) at NIQ, a global market
+        working as a Data Analyst at NIQ, a global market
         research organization with over a century of industry presence.
       </p>
       <p>
@@ -410,7 +410,7 @@
       <p>Market Research (NIQ) and Retail Analytics</p>
 
       <h3>Career Focus</h3>
-      <p>Data Analyst | Power BI Developer | Data Scientist</p>
+      <p>Data Analyst | Data Engineer | Data Scientist</p>
     </section>
 
     <!-- EXPERIENCE -->
@@ -421,7 +421,7 @@
   <div class="exp-accordion">
     <div class="exp-header" onclick="toggleExp(this)">
       <div>
-        <div class="exp-title">NIQ — Data Analyst</div>
+        <div class="exp-title">NIQ — Data Processing Analyst</div>
         <div class="exp-subtitle">Jan 2023 – Nov 2025 | Chennai</div>
       </div>
       <div class="exp-toggle">Read more</div>
@@ -431,7 +431,7 @@
       <div class="exp-body-inner">
 <h3>Role Overview</h3>
 <p>
-  Worked as a Data Analyst at NIQ, supporting enterprise stakeholders across
+  Worked as a Data Processing Analyst at NIQ, supporting enterprise stakeholders across
   supply chain, finance, and operations by delivering scalable Power BI
   reporting solutions and reliable business insights.
 </p>
@@ -888,7 +888,7 @@
     <!-- CONTACT (ORIGINAL) -->
     <section id="contact" class="page">
       <h1>Contact</h1>
-      <p><strong>Email:</strong> lakshmitejakumar.sriperumbuduru@gmail.com</p>
+      <p><strong>Email:</strong> lakshmitejkumar.sriperumbuduru@gmail.com</p>
       <p><strong>Phone:</strong> +91 7093008246</p>
       <p>
         <strong>LinkedIn:</strong>
@@ -919,7 +919,7 @@
   <div class="profile">
     <img src="sources/profile_new.png">
     <div class="caption">
-      <div class="name">S. Lakshmi Teja Kumar</div>
+      <div class="name">S. Lakshmi Tej Kumar</div>
       <div class="degree">MBA in Business Analytics</div>
     </div>
   </div>
